--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -1,4 +1,8 @@
 //main styles
+body{
+	height: auto;
+}
+
 
 .main-wrapper{
 	padding: 0 0 0 0;
@@ -194,10 +198,10 @@ h3{
 		}
 		&_5{
 			background-image: url(../img/icon_smoking-blends.svg);
-			background-size: contain;
-			background-size: 100% 100%;
+			background-size: cover;
+			background-position: 100%;
 			width: 20px;
-			height: 16px;
+			height: 17px;
 			display: inline-block;
 		}
 		&_6{
@@ -942,7 +946,7 @@ h3{
 		/*font-weight: 700;*/
 		font-family: 'Roboto', sans-serif;
 		font-size: 12px;
-		font-weight: 100;
+		font-weight: 400;
 		text-transform: uppercase;
 		color: #fff;
 		padding: 8px 0px;
@@ -4359,11 +4363,18 @@ h3{
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
     body{min-height: 100hv; width: 100%; display: flex; flex-direction: column;}
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+	.main{
+		&__container{
+			max-width: 892px;
+    		margin-left: auto;
+    		margin-right: auto;
+		}
+	}
 	.content{
 		.wrapper{
-			max-width: 100%;
-			min-width: 100%;
+			/*width: 892px;*/
+			min-width: auto;
 		}
 	}
 	.sidebar{
@@ -4377,6 +4388,12 @@ h3{
 	}
 	.maincont{
 		margin-left: auto;
+    	margin-right: auto;
+    	width: 100%;
+	}
+	.catgoods,.popular,.reviews,.information{
+		max-width: 892px;
+    	margin-left: auto;
     	margin-right: auto;
 	}
 }
@@ -4430,6 +4447,9 @@ h3{
     	ul{
     		display: flex;
     		justify-content: space-around;
+    	}
+    	a{
+    		font-size: 11px;
     	}
    	}
 	.information{
@@ -4879,6 +4899,7 @@ h3{
 		&__item{
 			/*justify-content: center;*/
 			padding: 10px 25px;
+			min-height: 40px;
 		}
 		&__remove{
 		    background: #fff;
