--- a/smoky/scss/layout/_header.scss
+++ b/smoky/scss/layout/_header.scss
@@ -239,7 +239,7 @@ header{
 		height: 50px;
 		display: flex;
 		justify-content: center;
-		align-items: stretch;
+		align-items: center;
 		position: relative;
 		span{
 			color: #192028;
