--- a/smoky/scss/layout/_header.scss
+++ b/smoky/scss/layout/_header.scss
@@ -256,12 +256,14 @@ header{
 		&_1{
 			span{
 				top: 17px;
+				left: 20px;
 			}
 		}
 		&_2{
 			span{
 				top: 9px;
     			margin-left: -0.5px;
+    			left: 25px;
 			}
 		}
 	}
