--- a/smoky/scss/layout/_header.scss
+++ b/smoky/scss/layout/_header.scss
@@ -945,11 +945,13 @@ header{
     		&_1{
     			span{
     				top: 8px;
+    				left: 13.5px;
     			}
     		}
     		&_2{
     			span{
     				top: 3px;
+    				left: 16px;
     			}
     		}
     		&_active{
