--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -22,7 +22,7 @@ body{
 	justify-content:flex-start;	
     -webkit-justify-content:flex-start;	
     -ms-flex-pack: start;
-    align-items: center;
+    /*align-items: center;*/
     background: url(../img/bg.jpg) top center no-repeat;
     background-size: cover;
 }
@@ -3657,7 +3657,7 @@ h3{
 		transition: 0.3s;
 		cursor: pointer;
 		&:hover{
-			margin-top: -3px;
+			/*margin-top: -3px;*/
 			img{
 				filter: hue-rotate(317deg);
 			}
