--- a/smoky/scss/layout/_footer.scss
+++ b/smoky/scss/layout/_footer.scss
@@ -17,6 +17,7 @@ footer{
 	margin: 0 auto;
 	box-shadow: 0px 0px 7px 1px rgba(0, 0, 0, 0.33);
     position: relative;
+    align-self: center;
 	.wrapper{
 		max-width: 1070px;
 		min-width: 1070px;
