--- a/smoky/scss/layout/_header.scss
+++ b/smoky/scss/layout/_header.scss
@@ -597,7 +597,7 @@ header{
 			align-items: center;
 			margin-left: 15px;
     		margin-right: 0;
-    		width: calc(100% - 700px);			
+    		/*width: calc(100% - 700px);	*/		
     		justify-self: flex-start;
     		i{
 				display: block;
@@ -720,7 +720,7 @@ header{
 			justify-content: flex-start;
 			align-items: center;
 			margin-right: 15px;
-			width: calc(100% - 590px);
+			/*width: calc(100% - 590px);*/
 			/*i{
 				display: block;
     			font-size: 30px;
