--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -1862,6 +1862,9 @@ h3 {
   height: 17px;
   cursor: pointer;
 }
+.colorbox_y i {
+  color: #000 !important;
+}
 .colorbox_br {
   border-bottom: 1px solid #a2a2a2;
   background: #c05c38;
@@ -1901,6 +1904,9 @@ h3 {
   width: 16px;
   height: 17px;
   cursor: pointer;
+}
+.colorbox_y2 i {
+  color: #000 !important;
 }
 .colorbox_br2 {
   border-bottom: 1px solid #a2a2a2;
@@ -2362,7 +2368,7 @@ h3 {
   top: 30px;
   left: 0;
   z-index: 11;
-  width: 895px;
+  width: 892px;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -4111,12 +4117,13 @@ h3 {
   align-items: center;
 }
 #clock div {
-  width: 32px;
-  height: 33px;
+  width: 42px;
+  height: 44px;
   background: url(../img/timer.png) center center no-repeat;
+  background-size: 100%;
   color: #bd3c7a;
   font-family: 'Roboto', sans-serif;
-  font-size: 16px;
+  font-size: 19px;
   font-weight: 500;
   text-align: center;
   margin: 0 1px;
@@ -4127,7 +4134,7 @@ h3 {
   -webkit-text-size-adjust: 100%;
 }
 #clock div span {
-  font-size: 8px;
+  font-size: 11px;
   display: inline-block;
   margin-top: -2px;
   -webkit-text-size-adjust: 100%;
@@ -4228,7 +4235,7 @@ h3 {
 }
 .product .sp-large {
   margin-left: 50px;
-  height: 280px !important;
+  height: 291px !important;
   width: 216px !important;
   border: 1px solid #cfcfcf;
   border-radius: 8px;
@@ -5812,9 +5819,15 @@ h3 {
     margin-right: auto;
   }
 
+  .dropdown {
+    width: 100%;
+    justify-content: space-around;
+  }
+
   .content .wrapper {
     /*width: 892px;*/
     min-width: auto;
+    max-width: 100%;
   }
 
   .sidebar {
@@ -5857,6 +5870,11 @@ h3 {
   .content .wrapper {
     max-width: 100%;
     min-width: 100%;
+  }
+
+  .dropdown {
+    width: 100%;
+    justify-content: space-around;
   }
 
   .sidebar {
