--- a/smoky/scss/layout/_content.scss
+++ b/smoky/scss/layout/_content.scss
@@ -466,6 +466,9 @@ h3{
 		width: 16px;
 		height: 17px;
 		cursor: pointer;
+		i{
+			color: #000 !important;
+		}
 	}
 	&_br{
 		border-bottom: 1px solid #a2a2a2;
@@ -506,6 +509,9 @@ h3{
 		width: 16px;
 		height: 17px;
 		cursor: pointer;
+		i{
+			color: #000 !important;
+		}
 	}
 	&_br2{
 		border-bottom: 1px solid #a2a2a2;
@@ -963,7 +969,7 @@ h3{
 	top: 30px;
 	left: 0;
 	z-index: 11;
-	width: 895px;
+	width: 892px;
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
@@ -2708,12 +2714,13 @@ h3{
 	justify-content: center;
 	align-items: center;
 	div{
-		width: 32px;
-		height: 33px;
+		width: 42px;
+		height: 44px;
 		background: url(../img/timer.png) center center no-repeat;
+		background-size: 100%;
 		color: #bd3c7a;
 		font-family: 'Roboto', sans-serif;
-		font-size: 16px;
+		font-size: 19px;
 		font-weight: 500;
 		text-align: center;
 		margin: 0 1px;
@@ -2723,7 +2730,7 @@ h3{
     	flex-direction: column;
     	-webkit-text-size-adjust: 100%;
 		span{
-			font-size: 8px;
+			font-size: 11px;
 			display: inline-block;
 			margin-top: -2px;
 			-webkit-text-size-adjust: 100%;
@@ -2822,7 +2829,7 @@ h3{
 	}
 	.sp-large{
 		margin-left: 50px;
-		height: 280px !important;
+		height: 291px !important;
     	width: 216px !important;
     	border: 1px solid #cfcfcf;
     	border-radius: 8px;
@@ -4416,10 +4423,15 @@ h3{
     		margin-right: auto;
 		}
 	}
+	.dropdown{
+		width: 100%;
+		justify-content: space-around;
+	}
 	.content{
 		.wrapper{
 			/*width: 892px;*/
 			min-width: auto;
+			max-width: 100%;
 		}
 	}
 	.sidebar{
@@ -4472,6 +4484,10 @@ h3{
 			max-width: 100%;
 			min-width: 100%;
 		}
+	}
+	.dropdown{
+		width: 100%;
+		justify-content: space-around;
 	}
 	.sidebar{
 		position: fixed;
