--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -4214,7 +4214,17 @@ h3 {
   font-weight: 300;
   line-height: 18px;
 }
+.description__par{
+  color: #2d2d2d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 18px;
+}
 .description__p b {
+  font-weight: 500;
+}
+.description__par b{
   font-weight: 500;
 }
 .description .showmore {
