--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -4207,7 +4207,7 @@ h3 {
   font-size: 14px;
   font-weight: 300;
 }
-.description__p {
+.description p {
   color: #2d2d2d;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
