--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -4214,7 +4214,7 @@ h3 {
   font-weight: 300;
   line-height: 18px;
 }
-.description__p b {
+.description p b {
   font-weight: 500;
 }
 .description .showmore {
