--- a/smoky/css/style.css
+++ b/smoky/css/style.css
@@ -4209,10 +4209,9 @@ h3 {
 }
 .description p {
   color: #2d2d2d;
-  /*font-family: 'Roboto', sans-serif;*/
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 300;
-  line-height: 18px;
 }
 .description p b {
   font-weight: 500;
